// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox@desktop client environment должен вернуть полный шаблон компонента (snapshot) 1`] = `
<span
  class="Checkbox mix"
>
  <span
    class="Checkbox-Box"
  >
    <input
      aria-labelledby="label-clientTemplateId"
      autocomplete="off"
      class="Checkbox-Control"
      id="clientTemplateId"
      type="checkbox"
    />
    <span
      class="Checkbox-Tick"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_hasGlyph Icon_glyph_type-tick"
      >
        <svg
          focusable="false"
          height="0"
          viewBox="0 0 12 10"
          width="0"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M.49 5.385l1.644-1.644 4.385 4.385L4.874 9.77.49 5.385zm4.384 1.096L10.356 1 12 2.644 6.519 8.126 4.874 6.48v.001z"
          />
        </svg>
      </span>
    </span>
  </span>
</span>
`;

exports[`Checkbox@desktop server environment должен вернуть полный шаблон компонента (snapshot) 1`] = `
<span
  class="Checkbox mix"
>
  <span
    class="Checkbox-Box"
  >
    <input
      aria-labelledby="label-serverTemplateId"
      autocomplete="off"
      class="Checkbox-Control"
      id="serverTemplateId"
      type="checkbox"
    />
    <span
      class="Checkbox-Tick"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_hasGlyph Icon_glyph_type-tick"
      >
        <svg
          focusable="false"
          height="0"
          viewBox="0 0 12 10"
          width="0"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M.49 5.385l1.644-1.644 4.385 4.385L4.874 9.77.49 5.385zm4.384 1.096L10.356 1 12 2.644 6.519 8.126 4.874 6.48v.001z"
          />
        </svg>
      </span>
    </span>
  </span>
</span>
`;

exports[`Checkbox@touch-pad client environment должен вернуть полный шаблон компонента (snapshot) 1`] = `
<span
  class="Checkbox mix"
>
  <span
    class="Checkbox-Box"
  >
    <input
      aria-labelledby="label-clientTemplateId"
      autocomplete="off"
      class="Checkbox-Control"
      id="clientTemplateId"
      type="checkbox"
    />
    <span
      class="Checkbox-Tick"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_hasGlyph Icon_glyph_type-tick"
      >
        <svg
          focusable="false"
          height="0"
          viewBox="0 0 12 10"
          width="0"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M.49 5.385l1.644-1.644 4.385 4.385L4.874 9.77.49 5.385zm4.384 1.096L10.356 1 12 2.644 6.519 8.126 4.874 6.48v.001z"
          />
        </svg>
      </span>
    </span>
  </span>
</span>
`;

exports[`Checkbox@touch-pad server environment должен вернуть полный шаблон компонента (snapshot) 1`] = `
<span
  class="Checkbox mix"
>
  <span
    class="Checkbox-Box"
  >
    <input
      aria-labelledby="label-serverTemplateId"
      autocomplete="off"
      class="Checkbox-Control"
      id="serverTemplateId"
      type="checkbox"
    />
    <span
      class="Checkbox-Tick"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_hasGlyph Icon_glyph_type-tick"
      >
        <svg
          focusable="false"
          height="0"
          viewBox="0 0 12 10"
          width="0"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M.49 5.385l1.644-1.644 4.385 4.385L4.874 9.77.49 5.385zm4.384 1.096L10.356 1 12 2.644 6.519 8.126 4.874 6.48v.001z"
          />
        </svg>
      </span>
    </span>
  </span>
</span>
`;

exports[`Checkbox@touch-phone client environment должен вернуть полный шаблон компонента (snapshot) 1`] = `
<span
  class="Checkbox mix"
>
  <span
    class="Checkbox-Box"
  >
    <input
      aria-labelledby="label-clientTemplateId"
      autocomplete="off"
      class="Checkbox-Control"
      id="clientTemplateId"
      type="checkbox"
    />
    <span
      class="Checkbox-Tick"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_hasGlyph Icon_glyph_type-tick"
      >
        <svg
          focusable="false"
          height="0"
          viewBox="0 0 12 10"
          width="0"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M.49 5.385l1.644-1.644 4.385 4.385L4.874 9.77.49 5.385zm4.384 1.096L10.356 1 12 2.644 6.519 8.126 4.874 6.48v.001z"
          />
        </svg>
      </span>
    </span>
  </span>
</span>
`;

exports[`Checkbox@touch-phone server environment должен вернуть полный шаблон компонента (snapshot) 1`] = `
<span
  class="Checkbox mix"
>
  <span
    class="Checkbox-Box"
  >
    <input
      aria-labelledby="label-serverTemplateId"
      autocomplete="off"
      class="Checkbox-Control"
      id="serverTemplateId"
      type="checkbox"
    />
    <span
      class="Checkbox-Tick"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_hasGlyph Icon_glyph_type-tick"
      >
        <svg
          focusable="false"
          height="0"
          viewBox="0 0 12 10"
          width="0"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M.49 5.385l1.644-1.644 4.385 4.385L4.874 9.77.49 5.385zm4.384 1.096L10.356 1 12 2.644 6.519 8.126 4.874 6.48v.001z"
          />
        </svg>
      </span>
    </span>
  </span>
</span>
`;
